updated pdf; only works on desktop; need to solve horizontal scroll problem on small browser window

--- a/public/css/blog_template_stylesheet.css
+++ b/public/css/blog_template_stylesheet.css
@@ -117,6 +117,10 @@ div.about-text p {
   font-size: 175%;
   color: darkred;
 }
+.resume-container {
+  width: 8.5in;
+  margin: auto;
+}
 .resume-content {
   /* margin: auto; */
 
